--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,4 @@
 steps:
-  # Deploy core-api service
   - id: build-and-deploy-core-api
     name: gcr.io/google.com/cloudsdktool/cloud-sdk:slim
     entrypoint: bash
@@ -12,7 +11,6 @@ steps:
           --platform managed \
           --allow-unauthenticated
 
-  # Deploy booking-api service
   - id: build-and-deploy-booking-api
     name: gcr.io/google.com/cloudsdktool/cloud-sdk:slim
     entrypoint: bash
@@ -24,6 +22,10 @@ steps:
           --region $_REGION \
           --platform managed \
           --allow-unauthenticated
+
+options:
+  logging: CLOUD_LOGGING_ONLY       # или NONE
+  default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
 
 substitutions:
   _REGION: europe-west3
