chore: configure firebase project

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,9 +1,9 @@
 {
   "projects": {
-    "default": "YOUR_PROJECT_ID"
+    "default": "zabicekiosk"
   },
   "targets": {
-    "YOUR_PROJECT_ID": {
+    "zabicekiosk": {
       "hosting": {
         "kiosk": ["kiosk-web"],
         "admin": ["admin-web"]
