--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,25 +33,25 @@ steps:
           --allow-unauthenticated \
           --set-env-vars GOOGLE_CLOUD_PROJECT=$PROJECT_ID,FIRESTORE_DATABASE_ID=$_FIRESTORE_DATABASE_ID
 
-  - id: build-kiosk-web
+  - id: build-zabice-kiosk-web
     name: node:20
     entrypoint: npm
     dir: web/kiosk-pwa
     args: ['ci']
 
-  - id: build-kiosk-web-build
+  - id: build-zabice-kiosk-web-build
     name: node:20
     entrypoint: npm
     dir: web/kiosk-pwa
     args: ['run', 'build']
 
-  - id: build-admin-web
+  - id: build-zabice-admin-web
     name: node:20
     entrypoint: npm
     dir: web/admin-portal
     args: ['ci']
 
-  - id: build-admin-web-build
+  - id: build-zabice-admin-web-build
     name: node:20
     entrypoint: npm
     dir: web/admin-portal
@@ -64,8 +64,8 @@ steps:
       - -c
       - |
         npm install -g firebase-tools
-        firebase hosting:sites:create kiosk-web --project $PROJECT_ID || true
-        firebase hosting:sites:create admin-web --project $PROJECT_ID || true
+        firebase hosting:sites:create zabice-kiosk-web --project $PROJECT_ID || true
+        firebase hosting:sites:create zabice-admin-web --project $PROJECT_ID || true
         firebase deploy --project $PROJECT_ID --only hosting:kiosk,hosting:admin
 
 options:
