--- a/web/admin-portal/.env
+++ b/web/admin-portal/.env
@@ -3,5 +3,5 @@ VITE_FIREBASE_AUTH_DOMAIN=zabicekiosk.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=zabicekiosk
 
 # чтобы не зависеть от абсолютных доменов — ходим через прокси Hosting:
-VITE_CORE_API_URL=/api
+VITE_CORE_API_URL=
 VITE_BOOKING_API_URL=/booking
