Generate styled QR codes for client passes

--- a/web/admin-portal/package.json
+++ b/web/admin-portal/package.json
@@ -10,10 +10,11 @@
     "test": "echo 'No tests'"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
+    "qr-code-styling": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "firebase": "^10.7.1"
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
