chore: add parent web Firebase hosting

--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,8 @@
     "zabicekiosk": {
       "hosting": {
         "kiosk": ["zabice-kiosk-web"],
-        "admin": ["zabice-admin-web"]
+        "admin": ["zabice-admin-web"],
+        "parent": ["zabice-parent-web"]
       }
     }
   }
