--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,16 @@
         { "source": "/booking/**", "run": { "serviceId": "booking-api", "region": "europe-west3" } },
         { "source": "**", "destination": "/index.html" }
       ]
+    },
+    {
+      "target": "parent",
+      "public": "web/parent-web/dist",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        { "source": "/api/**", "run": { "serviceId": "core-api",    "region": "europe-west3" } },
+        { "source": "/booking/**", "run": { "serviceId": "booking-api", "region": "europe-west3" } },
+        { "source": "**", "destination": "/index.html" }
+      ]
     }
   ]
 }
