--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -57,6 +57,18 @@ steps:
     dir: web/admin-portal
     args: ['run', 'build']
 
+  - id: build-zabice-parent-web
+    name: node:20
+    entrypoint: npm
+    dir: web/parent-web
+    args: ['ci']
+
+  - id: build-zabice-parent-web-build
+    name: node:20
+    entrypoint: npm
+    dir: web/parent-web
+    args: ['run', 'build']
+
   - id: deploy-web
     name: node:20
     entrypoint: bash
@@ -66,7 +78,8 @@ steps:
         npm install -g firebase-tools
         firebase hosting:sites:create zabice-kiosk-web --project $PROJECT_ID || true
         firebase hosting:sites:create zabice-admin-web --project $PROJECT_ID || true
-        firebase deploy --project $PROJECT_ID --only hosting:kiosk,hosting:admin
+        firebase hosting:sites:create zabice-parent-web --project $PROJECT_ID || true
+        firebase deploy --project $PROJECT_ID --only hosting:kiosk,hosting:admin,hosting:parent
 
 options:
   logging: CLOUD_LOGGING_ONLY       # или NONE
