--- a/web/parent-web/package.json
+++ b/web/parent-web/package.json
@@ -10,6 +10,7 @@
     "test": "echo 'No tests'"
   },
   "dependencies": {
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
