Add missing qr-code-styling dependency

--- a/web/admin-portal/package.json
+++ b/web/admin-portal/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "qr-code-styling": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
