--- a/web/admin-portal/tsconfig.json
+++ b/web/admin-portal/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "noEmit": true
   },
   "include": ["src"],
   "references": []
