--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -66,6 +66,7 @@ steps:
     entrypoint: npm
     dir: web/admin-portal
     args: ['run', 'build']
+    secretEnv: ['VITE_FIREBASE_API_KEY']
 
   - id: build-zabice-parent-web
     name: node:20
@@ -94,6 +95,11 @@ steps:
 options:
   logging: CLOUD_LOGGING_ONLY       # или NONE
   default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
+
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/zabicekiosk_firebase_api_key/versions/latest
+      env: VITE_FIREBASE_API_KEY
 
 substitutions:
   _REGION: europe-west3
