fix: update Firebase secret path

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -98,7 +98,7 @@ options:
 
 availableSecrets:
   secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/zabicekiosk_firebase_api_key/versions/latest
+    - versionName: projects/120039745928/secrets/zabicekiosk_firebase_api_key/versions/latest
       env: VITE_FIREBASE_API_KEY
 
 substitutions:
