--- a/services/core-api/package.json
+++ b/services/core-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "fastify": "^4.26.2",
     "@fastify/cors": "^8.3.0",
+    "@fastify/multipart": "^9.0.3",
     "zod": "^3.22.4",
     "@google-cloud/firestore": "^7.7.0"
   },
