--- a/services/core-api/package.json
+++ b/services/core-api/package.json
@@ -7,18 +7,19 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "test": "tsc -p tsconfig.json --noEmit"
+    "test": "tsc -p tsconfig.json --noEmit",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
-    "fastify": "^4.26.2",
     "@fastify/cors": "^8.3.0",
-    "@fastify/multipart": "^9.0.3",
-    "zod": "^3.22.4",
-    "@google-cloud/firestore": "^7.7.0"
+    "@fastify/multipart": "^8.3.1",
+    "@google-cloud/firestore": "^7.7.0",
+    "fastify": "^4.26.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@types/node": "^20.11.19",
     "tsx": "^4.7.0",
-    "@types/node": "^20.11.19"
+    "typescript": "^5.3.3"
   }
 }
