--- a/web/admin-portal/package.json
+++ b/web/admin-portal/package.json
@@ -14,10 +14,7 @@
     "qr-code-styling": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "firebase": "^10.7.1",
-    "qr-code-styling": "^1.6.0"
-
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
