--- a/services/core-api/package.json
+++ b/services/core-api/package.json
@@ -22,6 +22,7 @@
     "@fastify/multipart": "^8.3.1",
     "@google-cloud/firestore": "^7.7.0",
     "duplexify": "^4.1.3",
+    "object-hash": "^3.0.0",
     "fastify": "^4.26.2",
     "zod": "^3.22.4"
   },
